--- a/susanin-face/src/app/app.component.html
+++ b/susanin-face/src/app/app.component.html
@@ -1,3 +1,21 @@
+<div style="height: 400px; background-color: gray">
+  <kendo-chart [title]="{ text: 'Timeline' }">
+    <kendo-chart-series>
+      <kendo-chart-series-item type="scatter"
+                               [data]="chart_data"
+                               xField="date" yField="value">
+      </kendo-chart-series-item>
+    </kendo-chart-series>
+    <kendo-chart-x-axis>
+      <kendo-chart-x-axis-item [title]="{ text: 'Дата' }">
+      </kendo-chart-x-axis-item>
+    </kendo-chart-x-axis>
+    <kendo-chart-y-axis>
+      <kendo-chart-y-axis-item [title]="{ text: 'Фича' }">
+      </kendo-chart-y-axis-item>
+    </kendo-chart-y-axis>
+  </kendo-chart>
+</div>
 <kendo-grid
   [data] = data
   [sortable]="{
@@ -6,6 +24,7 @@
   }"
 
   [sort]="sort"
+  [height]="550"
   (sortChange)="sortChange($event)">
   <kendo-grid-column field="name" title="Задача" [width]="150"></kendo-grid-column>
   <kendo-grid-column field="description" title="Описание" [width]="300"></kendo-grid-column>
