Hide multiple columns, show today date

--- a/susanin-face/src/app/app.component.html
+++ b/susanin-face/src/app/app.component.html
@@ -3,15 +3,23 @@
     <kendo-chart-series>
       <kendo-chart-series-item type="scatter"
                                [data]="chart_data"
+                               noteTextField="point_label"
                                xField="date" yField="value">
       </kendo-chart-series-item>
+
+      <kendo-chart-series-item type="scatter"
+                               noteTextField="point_label"
+                               [data]="today"
+                               xField="date" yField="value">
+      </kendo-chart-series-item>
+
     </kendo-chart-series>
     <kendo-chart-x-axis>
       <kendo-chart-x-axis-item [title]="{ text: 'Дата' }">
       </kendo-chart-x-axis-item>
     </kendo-chart-x-axis>
     <kendo-chart-y-axis>
-      <kendo-chart-y-axis-item [title]="{ text: 'Фича' }">
+      <kendo-chart-y-axis-item [title]="{ text: 'Фича' }" >
       </kendo-chart-y-axis-item>
     </kendo-chart-y-axis>
   </kendo-chart>
@@ -28,12 +36,12 @@
   (sortChange)="sortChange($event)">
   <kendo-grid-column field="name" title="Задача" [width]="150"></kendo-grid-column>
   <kendo-grid-column field="description" title="Описание" [width]="300"></kendo-grid-column>
-  <kendo-grid-column field="status" title="Статус" [width]="200"></kendo-grid-column>
-  <kendo-grid-column field="customer" title="Заказчик" [width]="120"></kendo-grid-column>
+<!--  <kendo-grid-column field="status" title="Статус" [width]="200"></kendo-grid-column>-->
+<!--  <kendo-grid-column field="customer" title="Заказчик" [width]="120"></kendo-grid-column>-->
   <kendo-grid-column field="readiness" title="%" [width]="50"></kendo-grid-column>
-  <kendo-grid-column field="started" title="Дата старта" [width]="120"></kendo-grid-column>
+<!--  <kendo-grid-column field="started" title="Дата старта" [width]="120"></kendo-grid-column>-->
   <kendo-grid-column field="plannedComplete" title="План. окончание" [width]="120"></kendo-grid-column>
-  <kendo-grid-column field="factComplete" title="Факт. окончание" [width]="120"></kendo-grid-column>
+<!--  <kendo-grid-column field="factComplete" title="Факт. окончание" [width]="120"></kendo-grid-column>-->
   <kendo-grid-column field="url" title="URL" [width]="200"></kendo-grid-column>
 </kendo-grid>
 
